// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio default snapshot 1`] = `
<DocumentFragment>
  <label
    class="radioButtonContainer radioButtonContainerChecked"
    data-testid="default-test1-container"
    for="default-test1"
  >
    <input
      checked=""
      data-testid="radio-default-test1"
      id="default-test1"
      name="default"
      type="radio"
      value="test1"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 1
      </span>
    </div>
  </label>
  <label
    class="radioButtonContainer"
    data-testid="default-test2-container"
    for="default-test2"
  >
    <input
      data-testid="radio-default-test2"
      id="default-test2"
      name="default"
      type="radio"
      value="test2"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 2
      </span>
    </div>
  </label>
  <label
    class="radioButtonContainer"
    data-testid="default-test3-container"
    for="default-test3"
  >
    <input
      data-testid="radio-default-test3"
      id="default-test3"
      name="default"
      type="radio"
      value="test3"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 3
      </span>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Radio description snapshot 1`] = `
<DocumentFragment>
  <label
    class="radioButtonContainer radioButtonContainerChecked"
    data-testid="default-test1-container"
    for="default-test1"
  >
    <input
      checked=""
      data-testid="radio-default-test1"
      id="default-test1"
      name="default"
      type="radio"
      value="test1"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 1
      </span>
    </div>
    <p
      class="description"
    >
      Lalalalalalala
    </p>
  </label>
  <label
    class="radioButtonContainer"
    data-testid="default-test2-container"
    for="default-test2"
  >
    <input
      data-testid="radio-default-test2"
      id="default-test2"
      name="default"
      type="radio"
      value="test2"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 2
      </span>
    </div>
    <p
      class="description"
    >
      Lololololololo
    </p>
  </label>
  <label
    class="radioButtonContainer"
    data-testid="default-test3-container"
    for="default-test3"
  >
    <input
      data-testid="radio-default-test3"
      id="default-test3"
      name="default"
      type="radio"
      value="test3"
    />
    <div
      class="header"
    >
      <div
        class="checkBox"
      >
        <div
          class="checkBoxFilling"
        />
      </div>
      <span
        class="title"
      >
        Test option 3
      </span>
    </div>
    <p
      class="description"
    >
      Lelelelelelele
    </p>
  </label>
</DocumentFragment>
`;
